# midway-quickstart

./: .gitmodules  CMakeLists.txt  cacerts.pem  partitions.csv
components/ESP32Encoder/src/: ESP32Encoder.cpp
components/Motor/: CMakeLists.txt  Kconfig.projbuild
components/Motor/include/: CatmullRom.h  Debouncer.hpp  IMUHelper.hpp  LED.hpp  LedStripHelper.hpp  Motor.hpp  Odometry.hpp  Preferences.hpp  PurePursuit.hpp  SNTPHelper.hpp  SettingsHelper.hpp  Telemetry.hpp  TelemetryPeriodicExample.hpp  WifiHelper.hpp
components/Motor/src/: CatmullRom.cpp  Debouncer.cpp  IMUHelper.cpp  LED.cpp  LedStripHelper.cpp  Motor.cpp  Motor.hpp  Odometry.cpp  Preferences.cpp  PurePursuit.cpp  SNTPHelper.cpp  SettingsHelper.cpp  Telemetry.cpp  WifiHelper.cpp
components/TCS34725/: CMakeLists.txt  TCS34725.cpp  TCS34725.hpp
components/VL53L0X/: CMakeLists.txt  Kconfig.projbuild  README.md
components/VL53L0X/examples/: VL53L0X_example.cpp
components/VL53L0X/include/: VL53L0X.h  VL53L0X.hpp  i2c.h
components/VL53L0X/src/: VL53L0X.c  VL53L0X.cpp  i2c.cpp
components/esp32_BNO08x/: README.md
components/esp32_BNO08x/include/: BNO08xGlobalTypes.hpp
components/esp32_BNO08x/source/: BNO08x.cpp
components/squiggles/: CMakeLists.txt  LICENCE  README.md
components/squiggles/src/: spline.cpp
main/: CMakeLists.txt  Kconfig.projbuild  jennys.hpp  main.cpp  main_old.cpp
